--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@
 **/android/key.properties
 
 # Ios related
-**/ios/Runner/GoogleService-Info.plist.*
+**/ios/Runner/GoogleService-Info.plist
 
 # Web related
 lib/generated_plugin_registrant.dart
