--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   firebase_database: ^3.1.6
   google_sign_in: ^4.5.1
+  provider: ^4.1.3+1
+  curved_navigation_bar: ^0.3.3
 
 dev_dependencies:
   flutter_test:
