--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   google_sign_in: ^4.5.1
   provider: ^4.1.3+1
   curved_navigation_bar: ^0.3.3
+  flutter_money_formatter: ^0.8.3
+  carousel_slider: ^2.2.1
 
 dev_dependencies:
   flutter_test:
